--- a/Core/Core/templates/ADMIN/Factura/nuevo_factura.html
+++ b/Core/Core/templates/ADMIN/Factura/nuevo_factura.html
@@ -17,7 +17,7 @@
 <body>
 
     {% include 'ADMIN/sidebar.html' %}
-
+<section class="fondo">
     <div class="content-wrapper">
         <div class="center-content">
             <h2>Nueva Factura</h2>
@@ -179,7 +179,7 @@
                 <button class="btn-guardar"><i class="fas fa-save"></i> Generar Factura</button>
             </div>
         </div>
-
+    </section>
         <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
         
         <script>
