--- a/Core/Core/templates/ADMIN/editar_producto.html
+++ b/Core/Core/templates/ADMIN/editar_producto.html
@@ -16,6 +16,7 @@
 
 {% include 'ADMIN/sidebar.html' %}
 
+<section class="fondo">
 <div class="content-wrapper">
     <div class="center-content">
         <h2 class="form-title">Editar Producto</h2>
@@ -51,6 +52,7 @@
     </form>
 </div> 
 </div>
+</section>
 
 <script>
     document.getElementById('editarProductoForm').addEventListener('submit', function(event) {
