--- a/Core/Core/templates/ADMIN/editar_tvehiculo.html
+++ b/Core/Core/templates/ADMIN/editar_tvehiculo.html
@@ -16,6 +16,7 @@
 
 {% include 'ADMIN/sidebar.html' %}
 
+<section class="fondo">
 <div class="content-wrapper">
     <div class="center-content">
         <h2 class="form-title">Editar Tipo de Vehiculo</h2>
@@ -40,7 +41,7 @@
         </form>
     </div>
 </div>
-
+</section>
 <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
 <script>
     document.getElementById('editarUsuarioForm').addEventListener('submit', function(event) {
