--- a/Core/Core/templates/ADMIN/editar_vehiculo.html
+++ b/Core/Core/templates/ADMIN/editar_vehiculo.html
@@ -15,6 +15,7 @@
 
 {% include 'ADMIN/sidebar.html' %}
 
+<section class="fondo">
 <div class="content-wrapper">
     <div class="center-content">
         <h2 class="form-title">Editar Vehiculo</h2>
@@ -54,6 +55,7 @@
     </form>
     </div>
 </div>
+</section>
 
 <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11/dist/sweetalert2.min.js"></script>
 <script>
