--- a/Core/Core/templates/ADMIN/productos.html
+++ b/Core/Core/templates/ADMIN/productos.html
@@ -14,12 +14,12 @@
 <body>
 
 {% include 'ADMIN/sidebar.html' %}
-
+<section class="fondo">
 <div class="content-wrapper">
     <div class="center-content">
         <h2>Lista de Productos</h2>
         <input type="text" id="searchInput" placeholder="Buscar Productos..." class="search-bar">
-        <div class="content-wrapper">
+        <div class="centraragregar">
             <div class="botones">
                 <!-- Botón para abrir el formulario de agregar vehículo -->
                     <button id="btnAbrirFormulario" class="btn-agregar"><i class="fas fa-plus"></i> Agregar</button>
@@ -54,6 +54,7 @@
                 <button type="button" class="btn-secondary btn-cancelar"><i class="fas fa-times"></i> Cancelar</button>
             </form>
         </div>
+
         <table class="user-table">
             <thead>
                 <tr>
@@ -88,6 +89,7 @@
         <br>
 
         <div id="paginationControls" class="pagination-controls"></div>
+    </section>
 
         <script>
             document.addEventListener('DOMContentLoaded', function() {
