--- a/Core/Core/templates/ADMIN/sidebar.html
+++ b/Core/Core/templates/ADMIN/sidebar.html
@@ -60,7 +60,14 @@
                 </span>
             </a>
         </li>
-
+        <li>
+            <a href="{% url 'ad_mpago'%}">
+                <i class="fa fa-dollar-sign fa-2x"></i>
+                <span class="nav-text">
+                   Metodos de Pago
+                </span>
+            </a>
+        </li>
         <li>
             <a href="{% url 'ad_empresas'%}">
                 <i class="fa fa-building fa-2x"></i>
