--- a/Core/Core/templates/ADMIN/vehiculos.html
+++ b/Core/Core/templates/ADMIN/vehiculos.html
@@ -15,12 +15,12 @@
 
 {% include 'ADMIN/sidebar.html' %}
 
+<section class="fondo">
 <div class="content-wrapper">
     <div class="center-content">
         <h2>Lista de Vehículos</h2>
         <input type="text" id="searchInput" placeholder="Buscar Vehículos..." class="search-bar">
-
-        <div class="content-wrapper">
+        <div class="centraragregar">
         <div class="botones">
         <!-- Botón para abrir el formulario de agregar vehículo -->
             <button id="btnAbrirFormulario" class="btn-agregar"><i class="fas fa-plus"></i> Agregar</button>
@@ -72,6 +72,7 @@
     <button type="submit" class="btn-primary btn-submit"><i class="fas fa-save"></i> Guardar</button>
     <button type="button" class="btn-secondary btn-cancelar"><i class="fas fa-times"></i> Cancelar</button>
 </form>
+</div>
 
         
         <table class="user-table">
@@ -112,7 +113,9 @@
         <br>
 
         <div id="paginationControls" class="pagination-controls"></div>
-
+    </div>
+</div>
+    </section>
         <script>
             document.addEventListener('DOMContentLoaded', function() {
                 const tableBody = document.getElementById('userTableBody');
