--- a/Core/Core/templates/LoginForm.html
+++ b/Core/Core/templates/LoginForm.html
@@ -1,5 +1,5 @@
 <div class="unique-container">
-    <h2>Login</h2>
+    <h2>Ingreso</h2>
     <form method="post">
         {% csrf_token %}
         <div class="unique-form-group">
