--- a/Core/Core/static/resources/css/styles.css
+++ b/Core/Core/static/resources/css/styles.css
@@ -1,3 +1,4 @@
+
 body, h1, h3, p, a {
   margin: 0;
   padding: 0;
@@ -48,13 +49,16 @@ nav {
     display: flex;
     align-items: center;
   }
+  nav .navbar .logo a:hover{
+    transform: scale(1.2);
+  }
   
   nav .navbar .logo a {
     color: #000000;
     font-size: 27px;
     font-weight: 600;
     text-decoration: none;
-    
+    transition: transform 0.5s;
   }
   
   nav .navbar .menu {
@@ -73,7 +77,7 @@ nav {
     font-weight: 500;
     text-decoration: solid;
     padding: 10px 15px;
-    transition: background 0.5s, border-radius 0.5s;
+    transition: background 0.5s, border-radius 0.5s, color 0.5s;
   }
   
   .navbar .menu li a:hover {
@@ -155,7 +159,12 @@ nav {
 }
 .footer .logo img{
   height: 120px ; 
+  transition: transform 0.3s;
 }
+.footer .logo img:hover{
+  transform: scale(1.3);
+}
+
 .contact span {
   display: block;
   margin-bottom: 5px;
@@ -300,6 +309,10 @@ section.services {
   text-align: center;
   padding: 20px;
   max-width: 300px;
+  transition: transform 0.7s;
+}
+.service-card:hover {
+  transform: scale(1.1);
 }
 
 .service-card img {
@@ -334,7 +347,7 @@ section.services {
 
 .carousel-item img {
   width: 100%;
-  height: 400px;
+  height: 500px;
   object-fit: cover;
 }
 
