--- a/Core/Core/templates/ADMIN/Factura/editar_factura.html
+++ b/Core/Core/templates/ADMIN/Factura/editar_factura.html
@@ -14,7 +14,7 @@
 <body>
    
     {% include 'ADMIN/sidebar.html' %}
-
+<section class="fondo">
     <div class="content-wrapper">
         <div class="center-content">
             <h2 class="form-title">Editar Factura</h2>
@@ -71,6 +71,7 @@
         </form>
     </div>
 </div>
+</section>
     
     <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
     <script>
