--- a/Core/Core/templates/ADMIN/editar_cliente.html
+++ b/Core/Core/templates/ADMIN/editar_cliente.html
@@ -16,6 +16,7 @@
 
 {% include 'ADMIN/sidebar.html' %}
 
+<section class="fondo">
 <div class="content-wrapper">
     <div class="center-content">
         <h2 class="form-title">Editar Cliente</h2>
@@ -52,6 +53,7 @@
     </form>
 </div>
 </div>
+<section>
 
 <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
 <script>
