--- a/Core/Core/templates/ADMIN/editar_empresa.html
+++ b/Core/Core/templates/ADMIN/editar_empresa.html
@@ -16,6 +16,7 @@
 
 {% include 'ADMIN/sidebar.html' %}
 
+<section class="fondo">
 <div class="content-wrapper">
     <div class="center-content">
         <h2 class="form-title">Editar Empresa</h2>
@@ -45,6 +46,7 @@
         </form>
     </div>
 </div>
+</section>
 
 <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
 <script>
