--- a/Core/Core/templates/ADMIN/eliminar_cliente.html
+++ b/Core/Core/templates/ADMIN/eliminar_cliente.html
@@ -16,6 +16,7 @@
 
 {% include 'ADMIN/sidebar.html' %}
 
+<section class="fondo">
 <div class="content-wrapper">
     <div class="center-content">
         <h2>Eliminar Cliente</h2>
@@ -30,6 +31,7 @@
         </div>
     </div>
 </div>
+</section>
 
 <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
 <script>
